# projekt-um

./: .envrc  main.ipynb  pyproject.toml
