[project]
name = "projekt-um"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "jupyter>=1.1.1",
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
